fix(toast): update toast overflow behaviour
Add word break to fix toast overflow behaviour

--- a/css/src/components/toast.css
+++ b/css/src/components/toast.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: row;
   box-sizing: border-box;
-
+  word-break: break-word;
   width: 360px;
   border-radius: var(--spacing-m);
   padding-left: var(--spacing-2);
